--- a/flask_workshop/backend/dev/flask-backend-dep.yaml
+++ b/flask_workshop/backend/dev/flask-backend-dep.yaml
@@ -13,7 +13,7 @@ spec:
       labels:
         app: flask-backend
     spec:
-      serviceAccountName: flask-backend-sa  # Todo: cdkでSAを作成する
+      serviceAccountName: flask-backend  # Todo: cdkでSAを作成する
       containers:
         - name: flask-backend
           image: 338456725408.dkr.ecr.ap-northeast-1.amazonaws.com/backend:latest
@@ -24,7 +24,7 @@ spec:
             - name: AWS_DEFAULT_REGION
               value: ap-northeast-1
             - name: DYNAMODB_TABLE_NAME  # Todo: cdkでDynamoDBを作成する
-              value: message
+              value: messages
       # restartPolicy: Always
   selector:
     matchLabels:
