--- a/flask_workshop/frontend/dev/flask-frontend-dep.yaml
+++ b/flask_workshop/frontend/dev/flask-frontend-dep.yaml
@@ -10,6 +10,7 @@ spec:
     replicas: 1
     template:
       metadata:
+        name: flask-frontend
         labels:
           app: flask-frontend
       spec:
