--- a/flask_workshop/frontend/dev/flask-frontend-dep.yaml
+++ b/flask_workshop/frontend/dev/flask-frontend-dep.yaml
@@ -9,7 +9,7 @@ spec:
   replicas: 1
   template:
     metadata:
-#      name: flask-frontend
+      name: flask-frontend
       labels:
         app: flask-frontend
     spec:
