--- a/flask_workshop/backend/dev/flask-backend-dep.yaml
+++ b/flask_workshop/backend/dev/flask-backend-dep.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: flask-backend
 spec:
-  replicas: 1
+  replicas: 2  # 1 -> 2
   template:
     metadata:
       labels:
