--- a/flask_workshop/frontend/dev/flask-frontend-dep.yaml
+++ b/flask_workshop/frontend/dev/flask-frontend-dep.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flask-frontend
-  namespace: flask-frontend  # 追加
+  namespace: flask-frontend
 spec:
   replicas: 1
   template:
