--- a/flask_workshop/backend/dev/flask-backend-dep.yaml
+++ b/flask_workshop/backend/dev/flask-backend-dep.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flask-backend
+  namespace: flask-backend  # 追加
 spec:
   replicas: 2  # 1 -> 2
   template:
