--- a/flask_workshop/frontend/dev/flask-frontend-dep.yaml
+++ b/flask_workshop/frontend/dev/flask-frontend-dep.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: flask-frontend
-        image: 338456725408.dkr.ecr.ap-northeast-1.amazonaws.com/frontend:2022-06-09H20.17.33-latest
+        image: 338456725408.dkr.ecr.ap-northeast-1.amazonaws.com/frontend:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 5000
